--- a/ReleaseNotes/ReleaseNotes.csproj
+++ b/ReleaseNotes/ReleaseNotes.csproj
@@ -7,6 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Config.txt" />
+    <None Remove="Tags.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Config.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Tags.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Octokit" Version="0.25.0" />
   </ItemGroup>
 
